--- a/gui/Makefile
+++ b/gui/Makefile
@@ -2,7 +2,7 @@ CC := gcc
 SRC_DIR := src
 BUILD_DIR := build
 INCLUDE_DIR := include
-CFLAGS := -Wall -Iinclude -I/usr/include/SDL2 `sdl2-config --libs --cflags` -lSDL2 -lSDL2_ttf -lpthread -lm -D INSTALL_DIR=\"`pwd`\"
+CFLAGS := -Wall -Iinclude -I/usr/include/SDL2 `sdl2-config --libs --cflags` -lSDL2 -lSDL2_ttf -lpthread -lm -D INSTALL_DIR=\"`pwd`\" -D SDL_MOUSE_TOUCH_EVENTS=1
 
 SRCS := $(wildcard $(SRC_DIR)/*.c)
 OBJS := $(patsubst $(SRC_DIR)/%.c, $(BUILD_DIR)/%.o, $(SRCS))
