--- a/gui/Makefile
+++ b/gui/Makefile
@@ -5,7 +5,9 @@ INCLUDE_DIR := include
 CFLAGS := -Wall -Iinclude -I/usr/include/SDL2 `sdl2-config --libs --cflags` -lSDL2 -lSDL2_ttf -lpthread -lm -D INSTALL_DIR=\"`pwd`\" -D SDL_MOUSE_TOUCH_EVENTS=1
 
 SRCS := $(wildcard $(SRC_DIR)/*.c)
+INCLUDES := $(wildcard $(INCLUDE_DIR)/*.h)
 OBJS := $(patsubst $(SRC_DIR)/%.c, $(BUILD_DIR)/%.o, $(SRCS))
+
 VPATH = $(SRC_DIR)
 
 EXEC := layout
@@ -16,5 +18,6 @@ $(EXEC): $(OBJS)
 $(BUILD_DIR)/%.o: %.c
 	$(CC) $(CFLAGS) -c $< -o $@
 
+.phony: clean
 clean:
 	rm -rf $(EXEC) $(BUILD_DIR)/*
