--- a/assets/key_bindings/default.yaml
+++ b/assets/key_bindings/default.yaml
@@ -88,6 +88,7 @@
   - s		: tl_track_selector_down
   - <ret>	: tl_track_activate_selected
   - C-r		: tl_track_rename
+  - C-S-i	: tl_track_toggle_in
   - m		: tl_mute
   - s		: tl_solo
   - r		: tl_start_stop_record
@@ -95,7 +96,7 @@
   - m		: tl_mute_unmute
   - s		: tl_solo_unsolo
   - r		: tl_record
-  - C-l		: tl_load_clip_at_point_to_source
+  - C-w		: tl_load_clip_at_point_to_source
   - S-1		: tl_activate_source_mode
   - b		: tl_drop_from_source
   - S-=		: tl_track_vol_up
