--- a/assets/key_bindings/default.yaml
+++ b/assets/key_bindings/default.yaml
@@ -61,6 +61,9 @@
   - S-k		: tl_pause
   - K-l		: tl_play_slow
   - K-j		: tl_rewind_slow
+  - C-l		: tl_play_drag
+  - C-j		: tl_rewind_drag
+  - C-k		: tl_pause_drag
   - ;		: tl_move_right
   - h		: tl_move_left
   - ,		: tl_zoom_out
@@ -96,7 +99,7 @@
   - m		: tl_mute_unmute
   - s		: tl_solo_unsolo
   - r		: tl_record
-  - C-w		: tl_load_clip_at_point_to_source
+  - C-1		: tl_load_clip_at_point_to_source
   - S-1		: tl_activate_source_mode
   - b		: tl_drop_from_source
   - S-=		: tl_track_vol_up
