--- a/assets/key_bindings/default.yaml
+++ b/assets/key_bindings/default.yaml
@@ -61,9 +61,7 @@
   - S-k		: tl_pause
   - K-l		: tl_play_slow
   - K-j		: tl_rewind_slow
-  - C-l		: tl_play_drag
-  - C-j		: tl_rewind_drag
-  - C-k		: tl_pause_drag
+  - C-k		: tl_toggle_drag
   - ;		: tl_move_right
   - h		: tl_move_left
   - ,		: tl_zoom_out
@@ -74,6 +72,7 @@
   - S-o		: tl_set_out_mark
   - C-i		: tl_goto_in_mark
   - C-o		: tl_goto_out_mark
+  - C-u		: tl_goto_zero
   - C-t		: tl_track_add
   - 1		: tl_track_select_1
   - 2		: tl_track_select_2
@@ -89,6 +88,7 @@
   - n		: tl_track_selector_down
   - w		: tl_track_selector_up
   - s		: tl_track_selector_down
+  - <spc>	: tl_track_activate_selected
   - <ret>	: tl_track_activate_selected
   - C-r		: tl_track_rename
   - C-S-i	: tl_track_toggle_in
