--- a/assets/key_bindings/default.yaml
+++ b/assets/key_bindings/default.yaml
@@ -109,6 +109,7 @@
   - A-t		: tl_add_new_timeline
   - A-j		: tl_previous_timeline
   - A-l		: tl_next_timeline
+  - S-w		: tl_write_mixdown_to_wav
 - source:
   - l		: source_play
   - k		: source_pause
