--- a/assets/key_bindings/default.yaml
+++ b/assets/key_bindings/default.yaml
@@ -94,6 +94,7 @@
   - <ret>	: tl_track_activate_selected
   - C-r		: tl_track_rename
   - C-S-i	: tl_track_set_in
+  - <del>	: tl_track_destroy
   - m		: tl_mute
   - s		: tl_solo
   - r		: tl_start_stop_record
