--- a/assets/key_bindings/default.yaml
+++ b/assets/key_bindings/default.yaml
@@ -34,9 +34,12 @@
 - menu_nav:
   - n		: menu_next_item
   - p		: menu_previous_item
+  - f		: menu_next_item
+  - d		: menu_previous_item
   - <up>	: menu_next_item
   - <down>	: menu_previous_item
   - <ret>     	: menu_choose_item
+  - <spc>	: menu_choose_item
   - <del>     	: menu_cancel
   - C-n	      	: menu_next_section
   - C-p	      	: menu_previous_section
@@ -51,7 +54,6 @@
   - w		: menu_translate_up
   - a		: menu_translate_left
   - s		: menu_translate_down
-  - d		: menu_translate_right
   - h		: menu_dismiss
 - timeline:
   - l		: tl_play
@@ -88,8 +90,8 @@
   - `		: tl_track_activate_all
   - p		: tl_track_selector_up
   - n		: tl_track_selector_down
-  - a		: tl_track_selector_up
-  - d		: tl_track_selector_down
+  - f		: tl_track_selector_down
+  - d		: tl_track_selector_up
   - <spc>	: tl_track_activate_selected
   - <ret>	: tl_track_activate_selected
   - C-r		: tl_track_rename
@@ -129,4 +131,8 @@
 - modal:
   - n		: modal_next
   - p		: modal_previous
+  - f		: modal_next
+  - d		: modal_previous
   - <ret>	: modal_select
+  - <spc>	: modal_select
+  - h		: modal_dismiss
