--- a/assets/key_bindings/default.yaml
+++ b/assets/key_bindings/default.yaml
@@ -99,7 +99,8 @@
   - <ret>	: tl_track_activate_selected
   - C-r		: tl_track_rename
   - C-S-i	: tl_track_set_in
-  - <del>	: tl_track_destroy
+  - C-<del>	: tl_track_destroy
+  - <del>	: tl_cliprefs_destroy
   - m		: tl_mute
   - s		: tl_solo
   - r		: tl_start_stop_record
