create version branch (prototype version) and fix gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,19 @@ jackdaw
 .clangd
 *.log
 todo.txt
-
+*.xml
+!gui/template_lts/*.xml
+*~
+*#
+.#*
+*.#*
+TAGS
+gui/complete.gif
+gui/gifframes
+*._c
+*._h
+layout
+jackdaw
+animation.gif
+gifframes
+*.dSYM
