--- a/assets/key_bindings/default.yaml
+++ b/assets/key_bindings/default.yaml
@@ -112,6 +112,9 @@
   - C-1		: tl_load_clip_at_point_to_source
   - S-1		: tl_activate_source_mode
   - b		: tl_drop_from_source
+  - v		: tl_drop_saved1_from_source
+  - c		: tl_drop_saved2_from_source
+  - x		: tl_drop_saved3_from_source
   - S-=		: tl_track_vol_up
   - S--		: tl_track_vol_down
   - S-9		: tl_track_pan_left
