--- a/assets/key_bindings/default.yaml
+++ b/assets/key_bindings/default.yaml
@@ -62,11 +62,11 @@
   - e		: tl_play
   - w		: tl_pause
   - q		: tl_rewind
+  - K-l		: tl_play_slow
+  - K-j		: tl_rewind_slow
   - S-l		: tl_play_slow
   - S-j		: tl_rewind_slow
   - S-k		: tl_pause
-  - K-l		: tl_play_slow
-  - K-j		: tl_rewind_slow
   - C-k		: tl_toggle_drag
   - S-c		: tl_cut_clipref
   - ;		: tl_move_right
@@ -75,11 +75,9 @@
   - .		: tl_zoom_in
   - i		: tl_set_in_mark
   - o		: tl_set_out_mark
-  - i		: tl_set_in_mark
-  - o		: tl_set_out_mark
   - S-i		: tl_goto_in_mark
   - S-o		: tl_goto_out_mark
-  - C-u		: tl_goto_zero
+  - S-u		: tl_goto_zero
   - C-S-o	: tl_set_default_out
   - C-t		: tl_track_add
   - 1		: tl_track_select_1
