--- a/assets/key_bindings/default.yaml
+++ b/assets/key_bindings/default.yaml
@@ -52,6 +52,7 @@
   - j	      	: menu_column_left
   - m		: menu_dismiss
   - h		: menu_dismiss
+  - <esc>	: menu_dismiss
 - timeline:
   - l		: tl_play
   - k		: tl_pause
@@ -147,4 +148,5 @@
   - <spc>	: modal_select
   - m		: modal_dismiss
   - h		: modal_dismiss
+  - <esc>	: modal_dismiss
   - C-<ret>	: modal_submit_form
