--- a/assets/key_bindings/default.yaml
+++ b/assets/key_bindings/default.yaml
@@ -150,3 +150,13 @@
   - h		: modal_dismiss
   - <esc>	: modal_dismiss
   - C-<ret>	: modal_submit_form
+- text_edit:
+  - <ret>	: text_edit_escape
+  - <tab>	: text_edit_escape
+  - <del>	: text_edit_backspace
+  - <left>	: text_edit_cursor_left
+  - <right>	: text_edit_cursor_right
+  - C-d		: text_edit_cursor_left
+  - C-b		: text_edit_cursor_left
+  - C-f		: text_edit_cursor_right
+  - C-a		: text_edit_select_all
