--- a/assets/key_bindings/default.yaml
+++ b/assets/key_bindings/default.yaml
@@ -120,6 +120,7 @@
   - A-t		: tl_add_new_timeline
   - A-j		: tl_previous_timeline
   - A-l		: tl_next_timeline
+  - C-e		: tl_write_mixdown_to_wav
   - S-w		: tl_write_mixdown_to_wav
 - source:
   - l		: source_play
