--- a/assets/key_bindings/default.yaml
+++ b/assets/key_bindings/default.yaml
@@ -27,6 +27,7 @@
   - C-q		: quit
   - C-z		: undo
   - C-y		: redo
+  - S-f		: show_output_freq_domain
   - C-s		: save_project
   - C-S-s	: save_current_project_as
   - C-o		: open_file
