--- a/assets/key_bindings/default.yaml
+++ b/assets/key_bindings/default.yaml
@@ -66,6 +66,12 @@
   - S-l		: tl_play_slow
   - S-j		: tl_rewind_slow
   - S-k		: tl_pause
+  - <left>	: tl_nudge_left
+  - <right>	: tl_nudge_right
+  - S-<left>	: tl_small_nudge_left
+  - S-<right>	: tl_small_nudge_right
+  - C-S-<left>	: tl_one_sample_left
+  - C-S-<right>	: tl_one_sample_right
   - C-k		: tl_toggle_drag
   - S-c		: tl_cut_clipref
   - ;		: tl_move_right
