added quickref functions

--- a/assets/key_bindings/default.yaml
+++ b/assets/key_bindings/default.yaml
@@ -103,6 +103,7 @@
   - C-r		: tl_track_rename
   - C-S-i	: tl_track_set_in
   - C-<del>	: tl_track_destroy
+  - S-t		: tl_track_open_settings
   - <del>	: tl_cliprefs_destroy
   - m		: tl_mute
   - s		: tl_solo
