--- a/assets/key_bindings/default.yaml
+++ b/assets/key_bindings/default.yaml
@@ -106,7 +106,7 @@
   - C-S-i	: tl_track_set_in
   - C-<del>	: tl_track_delete
   - S-t		: tl_track_open_settings
-  - <del>	: tl_cliprefs_destroy
+  - <del>	: tl_cliprefs_delete
   - m		: tl_mute
   - s		: tl_solo
   - g		: tl_grab_clips_at_point
