undo redo tempo track management

--- a/assets/key_bindings/default.yaml
+++ b/assets/key_bindings/default.yaml
@@ -127,6 +127,8 @@
   - C-v		: tl_paste_grabbed_clips
   - C-S-r	: tl_rename_clip_at_cursor
   - r		: tl_record
+  - C-S-t	: tl_tempo_track_add
+  - t		: tl_tempo_track_set_tempo
   - C-1		: tl_load_clip_at_cursor_to_source
   - S-1		: tl_activate_source_mode
   - b		: tl_drop_from_source
@@ -187,12 +189,18 @@
   - C-f		: text_edit_cursor_right
   - C-a		: text_edit_select_all
 - tabview:
+  - S-n		: tabview_next_escape
+  - S-p		: tabview_previous_escape
+  - S-f		: tabview_next_escape
+  - S-d		: tabview_previous_escape
   - <tab>	: tabview_next_escape
   - S-<tab>	: tabview_previous_escape
   - <ret>	: tabview_enter
   - h		: tabview_left
   - ;		: tabview_right
+  - S-j		: tabview_previous_tab
   - S-h		: tabview_previous_tab
+  - S-l		: tabview_next_tab
   - S-;		: tabview_next_tab
   - g		: tabview_escape
   - <esc>	: tabview_escape
