--- a/assets/key_bindings/default.yaml
+++ b/assets/key_bindings/default.yaml
@@ -180,7 +180,7 @@
 - text_edit:
   - <ret>	: text_edit_escape
   - <tab>	: text_edit_escape
-  - <esc>	: text_edit_escape
+  - <esc>	: text_edit_full_escape
   - S-<tab>	: text_edit_escape
   - <del>	: text_edit_backspace
   - <left>	: text_edit_cursor_left
