--- a/assets/key_bindings/default.yaml
+++ b/assets/key_bindings/default.yaml
@@ -113,6 +113,7 @@
   - S-p		: tl_move_track_up
   - S-f		: tl_move_track_down
   - S-d		: tl_move_track_up
+  - -		: tl_track_or_tracks_minimize
   - <spc>	: tl_track_activate_selected
   - <ret>	: tl_track_activate_selected
   - C-r		: tl_track_rename
