--- a/assets/key_bindings/default.yaml
+++ b/assets/key_bindings/default.yaml
@@ -218,3 +218,7 @@
   - S-;		: tabview_next_tab
   - g		: tabview_escape
   - <esc>	: tabview_escape
+- autocomplete_list:
+  - <tab>	: autocomplete_next
+  - S-<tab>	: autocomplete_previous
+  - <ret>	: autocomplete_select
