--- a/assets/key_bindings/default.yaml
+++ b/assets/key_bindings/default.yaml
@@ -35,6 +35,7 @@
   - C-o		: open_file
   - A-S-<del>	: chaotic_user_test
   - C-S-p	: start_api_server
+  - <spc>	: function_lookup
 - menu_nav:
   - n		: menu_next_item
   - p		: menu_previous_item
@@ -122,7 +123,6 @@
   - S-f		: tl_move_track_down
   - S-d		: tl_move_track_up
   - -		: tl_track_or_tracks_minimize
-  - <spc>	: tl_track_activate_selected
   - <ret>	: tl_track_activate_selected
   - C-r		: tl_track_rename
   - C-S-i	: tl_track_set_in
@@ -222,3 +222,4 @@
   - <tab>	: autocomplete_next
   - S-<tab>	: autocomplete_previous
   - <ret>	: autocomplete_select
+  - <esc>	: autocomplete_escape
