add effect userfn

--- a/assets/key_bindings/default.yaml
+++ b/assets/key_bindings/default.yaml
@@ -126,6 +126,7 @@
   - C-S-i	: tl_track_set_in
   - C-<del>	: tl_track_delete
   - S-t		: tl_track_open_settings
+  - S-e		: tl_track_add_effect
   - a		: tl_track_show_hide_automations
   - C-a		: tl_track_add_automation
   - S-r		: tl_track_automation_toggle_read
