rename input mode enum constants; add 'button_bind_userfn' for button animation; start piano panel

--- a/assets/key_bindings/default.yaml
+++ b/assets/key_bindings/default.yaml
@@ -270,4 +270,10 @@
   - p		: midi_qwerty_dis2
   - ;		: midi_qwerty_e2
   - '		: midi_qwerty_f2
+  - i		: null
   - q		: null
+  - r		: null
+  - <ret>	: null
+  - [		: null
+  - ]		: null
+  - <esc>	: midi_qwerty_escape
