add velocity fns to midi qwerty; add strs for octave, transpose, and velocity labeling in midi qwerty; add 'live' textboxes; finish ctrls gui for midi qwerty panel

--- a/assets/key_bindings/default.yaml
+++ b/assets/key_bindings/default.yaml
@@ -252,6 +252,8 @@
   - x		: midi_qwerty_octave_up
   - ,		: midi_qwerty_transpose_down
   - .		: midi_qwerty_transpose_up
+  - c		: midi_qwerty_velocity_down
+  - v		: midi_qwerty_velocity_up
   - a		: midi_qwerty_c1
   - w		: midi_qwerty_cis1
   - s		: midi_qwerty_d1
