fix submodule branches; try running cat install.sh >install chmod a+x install in SDL2 with localized target installation dir to appease SDL2_ttf build system

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,6 +4,8 @@
 [submodule "SDL"]
 	path = SDL
 	url = https://github.com/libsdl-org/SDL.git
+	branch = SDL2
 [submodule "SDL_ttf"]
 	path = SDL_ttf
 	url = https://github.com/libsdl-org/SDL_ttf.git
+	branch = SDL2
