piano roll mode; go to next/prev note

--- a/assets/key_bindings/default.yaml
+++ b/assets/key_bindings/default.yaml
@@ -151,6 +151,7 @@
   - t		: tl_click_track_set_tempo
   - C-1		: tl_load_clip_at_cursor_to_source
   - S-1		: tl_activate_source_mode
+  - C-S-e	: tl_edit_clip_at_cursor
   - b		: tl_drop_from_source
   - v		: tl_drop_saved1_from_source
   - c		: tl_drop_saved2_from_source
@@ -282,7 +283,12 @@
   - <esc>	: midi_qwerty_escape
   - S-q		: midi_qwerty_escape
 - piano_roll:
+  - <esc>	: piano_roll_escape
   - ,		: piano_roll_zoom_out
   - .		: piano_roll_zoom_in
   - h		: piano_roll_move_left
   - ;		: piano_roll_move_right
+  - n		: piano_roll_note_down
+  - p		: piano_roll_note_up
+  - S-l		: piano_roll_next_note
+  - S-j		: piano_roll_prev_note
