--- a/assets/key_bindings/default.yaml
+++ b/assets/key_bindings/default.yaml
@@ -34,7 +34,7 @@
   - C-o		: open_file
   - A-S-<del>	: chaotic_user_test
   - C-S-p	: start_api_server
-  - <spc>	: function_lookup
+  - S-<spc>	: function_lookup
 - menu_nav:
   - n		: menu_next_item
   - p		: menu_previous_item
@@ -68,6 +68,7 @@
   - e		: tl_play
   - w		: tl_pause
   - q		: tl_rewind
+  - <spc>	: tl_play_pause
   - K-l		: tl_play_slow
   - K-j		: tl_rewind_slow
   - S-k		: tl_pause
@@ -168,6 +169,7 @@
   - C-e		: tl_write_mixdown_to_wav
   - S-w		: tl_write_mixdown_to_wav
   - S-q		: tl_activate_qwerty_piano
+  - S-\		: tl_lock_view_to_playhead
 - source:
   - l		: source_play
   - k		: source_pause
@@ -293,3 +295,7 @@
   - p		: piano_roll_note_up
   - S-l		: piano_roll_next_note
   - S-j		: piano_roll_prev_note
+  - <down>	: piano_roll_dur_longer
+  - <up>	: piano_roll_dur_shorter
+  - 1		: piano_roll_dur_longer
+  - 2		: piano_roll_dur_shorter
