--- a/assets/key_bindings/default.yaml
+++ b/assets/key_bindings/default.yaml
@@ -287,6 +287,7 @@
   - <ret>	: null
   - [		: null
   - ]		: null
+  - `		: null
   - <esc>	: midi_qwerty_escape
   - S-q		: midi_qwerty_escape
 - piano_roll:
