--- a/assets/key_bindings/default.yaml
+++ b/assets/key_bindings/default.yaml
@@ -70,7 +70,6 @@
   - <spc>	: tl_play_pause
   - k-l		: tl_play_slow
   - k-j		: tl_rewind_slow
-  - S-k		: tl_pause
   - [		: tl_move_playhead_left
   - ]		: tl_move_playhead_right
   - S-[		: tl_move_playhead_left_slow
@@ -82,6 +81,7 @@
   - C-S-<left>	: tl_one_sample_left
   - C-S-<right>	: tl_one_sample_right
   - C-k		: tl_toggle_drag
+  - S-k		: tl_toggle_drag
   - S-c		: tl_cut_clipref
   - g-c		: tl_cut_clipref_and_grab_edges
   - ;		: tl_move_right
@@ -301,6 +301,8 @@
   - p		: piano_roll_note_up
   - S-l		: piano_roll_next_note
   - S-j		: piano_roll_prev_note
+  - S-p		: piano_roll_up_note
+  - S-n		: piano_roll_down_note
   - <down>	: piano_roll_dur_longer
   - <up>	: piano_roll_dur_shorter
   - 1		: piano_roll_dur_longer
