grab note edges; actually fix animation bug

--- a/assets/key_bindings/default.yaml
+++ b/assets/key_bindings/default.yaml
@@ -310,3 +310,6 @@
   - <ret>	: piano_roll_insert_note
   - <spc>	: piano_roll_insert_rest
   - g		: piano_roll_grab_ungrab
+  - g-j		: piano_roll_grab_note_left_edge
+  - g-l		: piano_roll_grab_note_right_edge
+  - g-k		: piano_roll_grab_no_edge
